5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1662_1399.log
== TEST (2019-04-15 15:25:33) 
-- CODE:
qtadedevotos = float(input("Candidato?(Ambrosio/Demelza)"))
votosvalidos = q
if (qtdadevotos1>=100):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    votosvalidos = q
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:36) 
-- CODE:
qtadedevotos1 = int(input("Candidato 1"))
qtadedevotos2 = int(input("Candidato 2"))


votosvalidos = qtdadevotos1 + qtdadevotos2 
if (qtadedvotos1>votosvalidos)
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")


-- ERROR:
File "XXXX", line 6
    if (qtadedvotos1>votosvalidos)
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:46) 
-- CODE:
qtadedevotos1 = int(input("Candidato 1"))
qtadedevotos2 = int(input("Candidato 2"))


votosvalidos = qtdadevotos1 + qtdadevotos2 
if (qtadedvotos1>=votosvalidos)
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")


-- ERROR:
File "XXXX", line 6
    if (qtadedvotos1>=votosvalidos)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:28:55) 
-- CODE:
qtadedevotos1 = int(input("Candidato 1"))
qtadedevotos2 = int(input("Candidato 2"))


votosvalidos = qtdadevotos1 + qtdadevotos2 
if (qtadedvotos1>votosvalidos):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    votosvalidos = qtdadevotos1 + qtdadevotos2 
NameError: name 'qtdadevotos1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:03) 
-- CODE:
qtadedevotos1 = int(input("Candidato 1:"))
qtadedevotos2 = int(input("Candidato 2:"))


votosvalidos = qtdadevotos1 + qtdadevotos2 
if (qtadedvotos1>votosvalidos):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    votosvalidos = qtdadevotos1 + qtdadevotos2 
NameError: name 'qtdadevotos1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:56) 
-- CODE:
qtadedevotos1 = int(input("Candidato 1:"))
qtadedevotos2 = int(input("Candidato 2:"))


votosvalidos = qtdadevotos1 + qtdadevotos2 
if (qtdadevotos1>=votosvalidos):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (qtdadevotos1/votosvalidos)
print(porcent)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    votosvalidos = qtdadevotos1 + qtdadevotos2 
NameError: name 'qtdadevotos1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:32:15) 
-- CODE:
qtadedevotos1 = int(input("Candidato 1:"))
qtadedevotos2 = int(input("Candidato 2:"))


votosvalidos = qtdadedevotos1 + qtdadevotos2 
if (qtdadevotos1>=votosvalidos):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (qtdadevotos1/votosvalidos)
print(porcent)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    votosvalidos = qtdadedevotos1 + qtdadevotos2 
NameError: name 'qtdadedevotos1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:32:39) 
-- CODE:
qtadedevotos1 = int(input("Candidato 1:"))
qtadedevotos2 = int(input("Candidato 2:"))


votosvalidos = qtdadedevotos1 + qtdadevotos2 
if (qtdadevotos1>=votosvalidos):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (qtdadedevotos1/votosvalidos)
print(porcent)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    votosvalidos = qtdadedevotos1 + qtdadevotos2 
NameError: name 'qtdadedevotos1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:42) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (q1>=votosvalidos):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)
print(porcent)

-- OUTPUT:
Demelza Olecram
0.6784425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:55) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (q1>=votosvalidos):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)
print(porcent)

-- OUTPUT:
Demelza Olecram
0.6784425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:34:16) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (q1>=votosvalidos):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)* 100
print(porcent)

-- OUTPUT:
Demelza Olecram
67.84425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:34:32) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (q1<=votosvalidos):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)* 100
print(porcent)

-- OUTPUT:
Ambrosio Rutra
67.84425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:34:50) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (q1<=votosvalidos):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)* 100
print(porcent)

-- EXECUTION TIME:
0.14497
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84425923622341
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.343033441121458
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46153846153847
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:04) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (q1<=votosvalidos):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)* 100
print(porcent)

-- OUTPUT:
Ambrosio Rutra
67.84425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:35:17) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (q1<=votosvalidos):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)* 100
print(porcent)

-- EXECUTION TIME:
0.112644
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84425923622341
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.343033441121458
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46153846153847
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:36) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (q2>=votosvalidos):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)* 100
print(porcent)

-- OUTPUT:
Demelza Olecram
67.84425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:35:58) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)* 100
print(porcent)

-- OUTPUT:
Ambrosio Rutra
67.84425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:36:09) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)* 100
print(porcent)

-- EXECUTION TIME:
0.15425
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84425923622341
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.343033441121458
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46153846153847
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:10) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)* 100
print(porcent)

-- OUTPUT:
Ambrosio Rutra
67.84425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:36:39) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/100) * votosvalidos
print(porcent)

-- OUTPUT:
Ambrosio Rutra
43844706000000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:25) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100
print(round(porcent, 2)

-- ERROR:
File "XXXX", line 14
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:29) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:37:38) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100
print(round(porcent, 2))

-- EXECUTION TIME:
0.226903
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:37:47) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:38:14) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100
print(round(porcent, 2))

-- EXECUTION TIME:
0.185229
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:38:35) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:39:19) 
-- CODE:
q1 = int(input("Candidato 1:"))
q1 = int(input("Candidato 2:"))


votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)
print(round(porcent, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    votosvalidos = q1 + q2 
NameError: name 'q2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:39:47) 
-- CODE:
q1 = int(input("Candidato 1:"))
q1 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)
print(round(porcent, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    votosvalidos = q1 + q2 
NameError: name 'q2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:01) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
0.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:33) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100 
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:40:44) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100 
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:41:06) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100 
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:41:18) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100 
print(round(porcent, 2))

-- EXECUTION TIME:
0.120485
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:41:20) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100 
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:41:39) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
	
else:
	print("Demelza Olecram")

porcent = (q1/votosvalidos) * 100 
print(round(porcent, 2))

-- EXECUTION TIME:
0.14533
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:41:54) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * 100 
print(round(porcent, 2))

-- EXECUTION TIME:
0.167044
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:41:56) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * 100 
print(round(porcent, 2))

-- EXECUTION TIME:
0.150752
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:42:08) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * 100 
print(round(porcent, 2))

-- EXECUTION TIME:
0.140111
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:42:20) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:42:32) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * (100)
print(round(porcent, 2))

-- EXECUTION TIME:
0.131144
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:43:02) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:43:52) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = q1 + q2 
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * (100)
print(round(porcent, 2))

-- EXECUTION TIME:
0.134596
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:46:35) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = (q1 + q2)
if (votosvalidos>=q1 + q2):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:46:43) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = (q1 + q2)
if (votosvalidos>=q1 + q2):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * (100)
print(round(porcent, 2))

-- EXECUTION TIME:
0.158905
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:46:46) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = (q1 + q2)
if (votosvalidos>=q1 + q2):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:47:27) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = (q1 + q2)
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:47:35) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = (q1 + q2)
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:48:22) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = (q1 + q2)
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
if (votosvalidos>=q2):
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
Demelza Olecram
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:48:49) 
-- CODE:
q1 = int(input("Candidato 1:"))
q2 = int(input("Candidato 2:"))

votosvalidos = (q1 + q2)
if (votosvalidos>=q1):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (q1/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:49:45) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos)
if (votosvalidos>=quantidadedevotos):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:49:58) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos)
if (votosvalidos>=quantidadedevotos):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- EXECUTION TIME:
0.218386
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
50.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
50.0
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
50.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:50:09) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos)
if (votosvalidos>=quantidadedevotos):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:50:28) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos)
if (votosvalidos>quantidadedevotos):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- EXECUTION TIME:
0.207211
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
50.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Ambrosio Rutra
50.0
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Ambrosio Rutra
50.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:50:30) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos)
if (votosvalidos>quantidadedevotos):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:51:26) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos2 = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos2)
if (quantidadedevotos > quantidadedevotos2):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:51:36) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos2 = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos2)
if (quantidadedevotos > quantidadedevotos2):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- EXECUTION TIME:
0.181392
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:51:41) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos2 = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos2)
if (quantidadedevotos > quantidadedevotos2):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:13) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos2 = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos2)
if (quantidadedevotos > quantidadedevotos2):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:52:16) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos2 = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos2)
if (quantidadedevotos > quantidadedevotos2):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- EXECUTION TIME:
0.24462
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:39) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos2 = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos2)
if (quantidadedevotos > quantidadedevotos2):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:52:41) 
-- CODE:
quantidadedevotos = int(input("Candidato 1:"))
quantidadedevotos2 = int(input("Candidato 2:"))

votosvalidos = (quantidadedevotos + quantidadedevotos2)
if (quantidadedevotos > quantidadedevotos2):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- EXECUTION TIME:
0.154307
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
5.34
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
38.46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:39) 
-- CODE:
quantidadedevotos = int(input("Candidato?(Ambrosio/Demelza)"))

votosvalidos = quantidadedevotos 
if (quantidadedevotos > votosvalidos:
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- ERROR:
File "XXXX", line 4
    if (quantidadedevotos > votosvalidos:
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:46) 
-- CODE:
quantidadedevotos = int(input("Candidato?(Ambrosio/Demelza)"))

votosvalidos = quantidadedevotos 
if (quantidadedevotos > votosvalidos):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos/votosvalidos) * (100)
print(round(porcent, 2))

-- OUTPUT:
Demelza Olecram
100.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:54:49) 
-- CODE:
quantidadedevotos1 = int(input(" "))
quantidadedevotos2 = int(input(" "))
votosvalidos = quantidadedevotos1 + quantidadedevotos2 
if (quantidadedevotos > votosvalidos):
	print("Ambrosio Rutra")
else:
	print("Demelza Olecram")
porcent = (quantidadedevotos1/votosvalidos) * (100)
print(round(porcent, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (quantidadedevotos > votosvalidos):
NameError: name 'quantidadedevotos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
